# mini-mysql-server

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  mini-mysql.service  seed.sh
src/: auth.rs  backend.rs  config.rs  logging.rs  main.rs  query.rs  rate_limit.rs
